--- a/OOPT4Project/Views/MainWindow/MainWindow.xaml
+++ b/OOPT4Project/Views/MainWindow/MainWindow.xaml
@@ -1,35 +1,39 @@
-﻿<Window x:Class="OOPT4Project.Views.Main.MainWindow"
+﻿<Window 
+        DataContext="{Binding RelativeSource={RelativeSource Self}}"
+        x:Class="OOPT4Project.Views.Main.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:skia="clr-namespace:SkiaSharp.Views.WPF;assembly=SkiaSharp.Views.WPF"
-		xmlns:local="clr-namespace:OOPT4Project"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-		mc:Ignorable="d"
+		xmlns:local="clr-namespace:OOPT4Project.Views.Main"
+		xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        mc:Ignorable="d"
 		Title="Hexalife" Height="900" Width="1600"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        Background="{DynamicResource MaterialDesignPaper}"
-        TextElement.FontWeight="Medium"
-        TextElement.FontSize="14"
-        FontFamily="{materialDesign:MaterialDesignFont}"
-        MouseWheel="Window_MouseWheel" KeyDown="Window_KeyDown"
-        >
-    <Grid>
+		TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+		Background="{DynamicResource MaterialDesignPaper}"
+		TextElement.FontWeight="Medium"
+		TextElement.FontSize="14"
+		FontFamily="{StaticResource InriaSerifBold}"
+		FontSize="16"
+		MouseWheel="Window_MouseWheel" KeyDown="Window_KeyDown"
+		>
+    <Grid x:Name="MainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1.8*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <skia:SKElement Grid.Column="1" PaintSurface="SKElement_PaintSurface" x:Name="SkElement1" Margin="-1,0,-1,0" MouseDown="SkElement1_MouseDown"/>
-        <Grid Background="#FF0C91A4">
+        <skia:SKElement Grid.Column="1" PaintSurface="SKElement_PaintSurface" x:Name="SKElement" Margin="-1,0,-1,0" MouseDown="SkElement1_MouseDown"/>
+        <Grid x:Name="HexalifeGrid" Background="#FF0C91A4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="40"/>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="10"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="130"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="30"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="30"/>
@@ -42,54 +46,129 @@
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
-            <Label Style="{StaticResource LabelHexalifeBig}" Content="Hexalife" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="1" FontWeight="Normal" FontStyle="Normal"/>
-            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Simulation control" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="1"/>
-            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Simulation settings" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="6"/>
-            <Rectangle Style="{StaticResource SeparatorThick}" HorizontalAlignment="Left" Margin="0,0,0,32" VerticalAlignment="Bottom" Width="300" Grid.Column="1"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Column="1" Grid.Row="1"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Row="5" Grid.Column="1"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Column="1" Grid.Row="6"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Column="1" Grid.Row="10"/>
-            <Button x:Name="PlayButton" Grid.Column="1" Content="Start/Stop" HorizontalAlignment="Left" Margin="74,0,0,0" Grid.Row="3" VerticalAlignment="Center" Click="PlayButton_Click"/>
-            <Button x:Name="SpeedDownButton" Grid.Column="1" Content="Down" HorizontalAlignment="Left" Grid.Row="3" VerticalAlignment="Center" Click="SpeedDownButton_Click"/>
-            <Button x:Name="SpeedUpButton" Grid.Column="1" Content="Up" HorizontalAlignment="Left" Margin="176,0,0,0" Grid.Row="3" VerticalAlignment="Center" Click="SpeedUpButton_Click"/>
-            <Button x:Name="StepButton" Grid.Column="1" Content="Step" HorizontalAlignment="Left" Margin="231,0,0,0" Grid.Row="3" VerticalAlignment="Center" Click="StepButton_Click"/>
-            <Button x:Name="NewMapButton" Grid.Column="1" Content="New Map" HorizontalAlignment="Left" Grid.Row="8" VerticalAlignment="Top" Click="NewMapButton_Click"/>
-            <Button x:Name="PopSimButton" Grid.Column="1" Content="Populate Simulation" HorizontalAlignment="Left" Grid.Row="8" VerticalAlignment="Top" Click="PopSimButton_Click" Margin="96,0,0,0"/>
-            <TextBox x:Name="SeedTB" Grid.Column="1" HorizontalAlignment="Left" Margin="0,37,0,0" Grid.Row="8" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="91" TextChanged="SeedTB_TextChanged" Background="#FFDFE0EF" Foreground="#FFD64949"/>
+            <Label Style="{StaticResource LabelHexalifeBig}" Content="Hexalife" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.Column="1" FontWeight="Normal" FontStyle="Normal"/>
+            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Simulation control" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="2"/>
+            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Simulation settings" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="7"/>
+            <Rectangle Style="{StaticResource SeparatorThick}" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="300" Grid.Column="1"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Column="1" Grid.Row="2"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Row="6" Grid.Column="1"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Column="1" Grid.Row="7"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Column="1" Grid.Row="11"/>
+            <Button x:Name="PlayButton" Grid.Column="1" Content="Start/Stop" HorizontalAlignment="Left" Margin="74,0,0,0" Grid.Row="4" VerticalAlignment="Center" Click="PlayButton_Click"/>
+            <Button x:Name="SpeedDownButton" Grid.Column="1" Content="Down" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Center" Click="SpeedDownButton_Click"/>
+            <Button x:Name="SpeedUpButton" Grid.Column="1" Content="Up" HorizontalAlignment="Left" Margin="176,0,0,0" Grid.Row="4" VerticalAlignment="Center" Click="SpeedUpButton_Click"/>
+            <Button x:Name="StepButton" Grid.Column="1" Content="Step" HorizontalAlignment="Left" Margin="231,0,0,0" Grid.Row="4" VerticalAlignment="Center" Click="StepButton_Click"/>
+            <Grid x:Name="SimulationSettingsGrid" Grid.Column="1" Grid.Row="9">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="320"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="55"/>
+                    <RowDefinition Height="55"/>
+                    <RowDefinition Height="55"/>
+                    <RowDefinition Height="55"/>
+                    <RowDefinition Height="55"/>
+                    <RowDefinition Height="70"/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+                <Button x:Name="PopSimButton" Content="Populate Simulation" HorizontalAlignment="Left" VerticalAlignment="Top" Click="PopSimButton_Click" Margin="156,18,0,0" Grid.Row="6"/>
+                <TextBox 
+                    Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                    materialDesign:HintAssist.Hint="Simulation Seed"
+                    materialDesign:HintAssist.FloatingScale="1.2"
+                    
+				x:Name="SeedTB" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding Seed}" VerticalAlignment="Center" Width="130" Foreground="Black" Height="50"/>
+                <TextBox 
+                    Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                    materialDesign:HintAssist.Hint="Map Size"
+                    materialDesign:HintAssist.FloatingScale="1.2"
+                    x:Name="MapSizeTB" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding MapSize}" VerticalAlignment="Center" Width="130" Foreground="Black" Margin="190,0,0,0" Height="50"/>
+                <TextBox 
+                    Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                    materialDesign:HintAssist.Hint="Grass Chance"
+                    materialDesign:HintAssist.FloatingScale="1.2"
+                    x:Name="GrassChanceTB" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding GrassChance, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" Width="130" Foreground="Black" Grid.Row="1" Height="50"/>
+                <TextBox 
+                    Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                    materialDesign:HintAssist.Hint="Lake Chance"
+                    materialDesign:HintAssist.FloatingScale="1.2"
+                    x:Name="LakeChanceTB" TextWrapping="Wrap" Text="{Binding LakeChance}" VerticalAlignment="Center" Foreground="Black" Margin="190,0,0,0" Grid.Row="1" Height="50" Width="130" HorizontalAlignment="Left"/>
+                <TextBox 
+                    Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                    materialDesign:HintAssist.Hint="Desert Chance"
+                    materialDesign:HintAssist.FloatingScale="1.2"
+                    x:Name="DesertChanceTB" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding DesertChance}" VerticalAlignment="Center" Width="130" Foreground="Black" Grid.Row="2" Height="50"/>
+                <TextBox 
+                    Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                    materialDesign:HintAssist.Hint="Badland Chance"
+                    materialDesign:HintAssist.FloatingScale="1.2"
+                    x:Name="BadlandChanceTB" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding BadlandChance}" VerticalAlignment="Center" Width="130" Foreground="Black" Margin="190,0,0,0" Grid.Row="2" Height="50"/>
+                <TextBox 
+                    Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                    materialDesign:HintAssist.Hint="Hills Chance"
+                    materialDesign:HintAssist.FloatingScale="1.2"
+                    x:Name="HillsChanceTB" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding HillsChance}" VerticalAlignment="Center" Width="130" Foreground="Black" Grid.Row="3" Height="50"/>
+                <TextBox 
+                    Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                    materialDesign:HintAssist.Hint="Marsh Chance"
+                    materialDesign:HintAssist.FloatingScale="1.2"
+                    x:Name="MarshChanceTB" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding MarshChance}" VerticalAlignment="Center" Width="130" Foreground="Black" Margin="190,0,0,0" Grid.Row="3" Height="50"
+                 />
+                <TextBox 
+                Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                materialDesign:HintAssist.Hint="Start Population"
+                materialDesign:HintAssist.FloatingScale="1.2"
+                x:Name="PopStartAmountTB" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding StartPopulation}" VerticalAlignment="Center" Width="130" Foreground="Black" Grid.Row="4" Height="50"/>
+                <TextBox 
+                    Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                    materialDesign:HintAssist.Hint="Add Population"
+                    materialDesign:HintAssist.FloatingScale="1.2"
+                    x:Name="PopAmountTB" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding AddPopulation}" VerticalAlignment="Top" Width="130" Foreground="Black" Grid.Row="6" Height="50"/>
+                <TextBox 
+                    Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                    materialDesign:HintAssist.Hint="Sudden Switch"
+                    materialDesign:HintAssist.FloatingScale="1.2"
+                    x:Name="SuddenSwitchTB" HorizontalAlignment="Left" TextWrapping="Wrap" Text="{Binding SuddenSwitch}" VerticalAlignment="Center" Width="130" Foreground="Black" Margin="190,0,0,0" Grid.Row="4" Height="50"/>
+                <Grid x:Name="SettingsButtonsGrid" Grid.Row="5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <Button x:Name="NewMapButton" Content="New Map" VerticalAlignment="Center" Click="NewMapButton_Click" Margin="0,0,10,0" HorizontalAlignment="Right" Width="90"/>
+                    <Button x:Name="ResetButton" Content="Reset" HorizontalAlignment="Left" Margin="10,0,0,0" VerticalAlignment="Center" Click="ResetButton_Click" Grid.Column="1" Width="90"/>
+                </Grid>
+            </Grid>
         </Grid>
-        <Grid Grid.Column="2" Background="#FF0C91A4">
+        <Grid x:Name="InspectorGrid" Grid.Column="2" Background="#FF0C91A4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="10"/>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="40"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="130"/>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="30"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="20"/>
-                <RowDefinition Height="81*"/>
+                <RowDefinition Height="8*"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="20"/>
-                <RowDefinition Height="56*"/>
+                <RowDefinition Height="5*"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="30"/>
             </Grid.RowDefinitions>
-            <Label Style="{StaticResource LabelHexalifeBig}" Content="Inspector" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Column="1" Height="84" Width="280" />
-            <Label x:Name="TargetLabel" Style="{StaticResource LabelHexalifeSmall}" Content="Target" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="1" Grid.Column="1" Height="46" Width="100" Margin="271,0,0,0" />
-            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Notifications" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="6" Grid.Column="1" Height="47" Width="189" Margin="182,0,0,0"/>
-            <Rectangle Width="300" VerticalAlignment="Bottom" Style="{StaticResource SeparatorThick}" Margin="0,0,0,36" HorizontalAlignment="Right" Grid.Column="1" Height="10"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Row="1" Grid.Column="1" Height="4"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" Margin="0,0,0,2" VerticalAlignment="Bottom" Width="300" Grid.Row="6" Grid.Column="1" Height="4"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Row="5" Grid.Column="1" Height="4" Margin="71,0,0,0"/>
-            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Row="10" Grid.Column="1" Height="4" Margin="71,0,0,0"/>
-            <DataGrid Grid.Column="1" Grid.Row="8" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="44,4,0,4"/>
-            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="285,10,0,0" Grid.Row="3" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" FontFamily="Inria Serif" FontSize="16"/>
-            <TextBlock Grid.Column="1" HorizontalAlignment="Left" Margin="295,41,0,0" Grid.Row="3" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top"/>
-            <DataGrid x:Name="CreatureListDataGrid" Grid.Column="1" Grid.Row="3" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="44,114,0,6" Background="#FF74F7E2" BorderBrush="#1F5F2B2B"/>
+            <Label Style="{StaticResource LabelHexalifeBig}" Content="Inspector" VerticalAlignment="Bottom" HorizontalAlignment="Right" Grid.Column="1" Height="84" Width="280" />
+            <Label x:Name="TargetLabel" Style="{StaticResource LabelHexalifeSmall}" Content="Target" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="2" Grid.Column="1" Height="46" Width="100" Margin="271,0,0,0" />
+            <Label Style="{StaticResource LabelHexalifeSmall}" Content="Notifications" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="7" Grid.Column="1" Height="47" Width="189" Margin="182,0,0,0"/>
+            <Rectangle Width="300" VerticalAlignment="Bottom" Style="{StaticResource SeparatorThick}" HorizontalAlignment="Right" Grid.Column="1" Height="10"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" Margin="0,0,0,0" VerticalAlignment="Bottom" Width="300" Grid.Row="2" Grid.Column="1" Height="4"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Right" Margin="0,0,0,2" VerticalAlignment="Bottom" Width="300" Grid.Row="7" Grid.Column="1" Height="4"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Row="6" Grid.Column="1" Height="4" Margin="71,0,0,0"/>
+            <Rectangle Style="{StaticResource SeparatorSlim}" HorizontalAlignment="Left" VerticalAlignment="Center" Width="300" Grid.Row="11" Grid.Column="1" Height="4" Margin="71,0,0,0"/>
         </Grid>
     </Grid>
 </Window>
