--- a/OOPT4Project/Views/MainWindow/MainWindow.xaml
+++ b/OOPT4Project/Views/MainWindow/MainWindow.xaml
@@ -9,7 +9,7 @@
 		xmlns:local="clr-namespace:OOPT4Project.Views.Main"
 		xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-		Title="Hexalife" Height="900" Width="1600" MinWidth="1350" MinHeight="900"
+		Title="Hexalife" MinWidth="1200" MinHeight="670" Width="1200" Height="670"
 		TextElement.Foreground="{DynamicResource MaterialDesignBody}"
 		Background="{DynamicResource MaterialDesignPaper}"
 		TextElement.FontWeight="Medium"
@@ -21,30 +21,30 @@
     <Grid x:Name="MainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="1.8*"/>
+            <ColumnDefinition Width="1.3*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <skia:SKElement Grid.Column="1" PaintSurface="SKElement_PaintSurface" x:Name="SKElement" Margin="-1,0,-1,0" MouseDown="SkElement1_MouseDown"/>
         <Grid x:Name="HexalifeGrid" Background="#FF0C91A4">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="40"/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="30*"/>
                 <ColumnDefinition Width="10"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="80"/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
+                <RowDefinition Height="10"/>
                 <RowDefinition Height="30"/>
-                <RowDefinition Height="20"/>
+                <RowDefinition Height="10"/>
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="10"/>
                 <RowDefinition/>
-                <RowDefinition Height="20"/>
+                <RowDefinition Height="10"/>
                 <RowDefinition Height="5"/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="20"/>
             </Grid.RowDefinitions>
             <Label Style="{StaticResource LabelHexalifeBig}" Content="Hexalife" VerticalAlignment="Bottom" HorizontalAlignment="Left" Grid.Column="1" FontWeight="Normal" FontStyle="Normal"/>
             <Label Style="{StaticResource LabelHexalifeSmall}" Content="Simulation control" VerticalAlignment="Center" HorizontalAlignment="Left" Grid.Column="1" Grid.Row="2"/>
@@ -57,7 +57,7 @@
             <Button x:Name="PlayButton" Grid.Column="1" Content="Start/Stop" HorizontalAlignment="Left" Margin="74,0,0,0" Grid.Row="4" VerticalAlignment="Center" Click="PlayButton_Click"/>
             <Button x:Name="SpeedDownButton" Grid.Column="1" Content="Down" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Center" Click="SpeedDownButton_Click"/>
             <Button x:Name="SpeedUpButton" Grid.Column="1" Content="Up" HorizontalAlignment="Left" Margin="176,0,0,0" Grid.Row="4" VerticalAlignment="Center" Click="SpeedUpButton_Click"/>
-            <Button x:Name="StepButton" Grid.Column="1" Content="Step" HorizontalAlignment="Left" Margin="231,0,0,0" Grid.Row="4" VerticalAlignment="Center" Click="StepButton_Click"/>
+            <Button x:Name="StepButton" Grid.Column="1" Content="Step" HorizontalAlignment="Left" Margin="231,0,0,0" Grid.Row="4" VerticalAlignment="Center" Click="StepButton_Click" BorderBrush="#FF00BCD4"/>
             <Grid x:Name="SimulationSettingsGrid" Grid.Column="1" Grid.Row="9">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="300"/>
@@ -69,7 +69,7 @@
                     <RowDefinition Height="55"/>
                     <RowDefinition Height="55"/>
                     <RowDefinition Height="55"/>
-                    <RowDefinition Height="70"/>
+                    <RowDefinition Height="50"/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Button x:Name="PopSimButton" Content="Populate Simulation" HorizontalAlignment="Left" VerticalAlignment="Top" Click="PopSimButton_Click" Margin="156,18,0,0" Grid.Row="6"/>
@@ -143,23 +143,23 @@
         <Grid x:Name="InspectorGrid" Grid.Column="2" Background="#FF0C91A4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="10"/>
-                <ColumnDefinition/>
-                <ColumnDefinition Width="40"/>
+                <ColumnDefinition Width="30*"/>
+                <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="80"/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="20"/>
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="10"/>
-                <RowDefinition Height="8*"/>
-                <RowDefinition Height="20"/>
+                <RowDefinition Height="9*"/>
+                <RowDefinition Height="10"/>
                 <RowDefinition Height="5"/>
                 <RowDefinition Height="50"/>
-                <RowDefinition Height="20"/>
-                <RowDefinition Height="5*"/>
-                <RowDefinition Height="20"/>
+                <RowDefinition Height="10"/>
+                <RowDefinition Height="4*"/>
+                <RowDefinition Height="10"/>
                 <RowDefinition Height="5"/>
-                <RowDefinition Height="30"/>
+                <RowDefinition Height="20"/>
             </Grid.RowDefinitions>
             <Label Style="{StaticResource LabelHexalifeBig}" Content="Inspector" VerticalAlignment="Bottom" HorizontalAlignment="Right" Grid.Column="1" Height="84" Width="280" />
             <Label x:Name="TargetLabel" Style="{StaticResource LabelHexalifeSmall}" Content="Target" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Row="2" Grid.Column="1" Height="46" Margin="0,0,0,0" />
@@ -180,7 +180,7 @@
                 </Grid.ColumnDefinitions>
                 <DataGrid
                     BorderThickness="5"
-                    BorderBrush="#FF488686"
+                    BorderBrush="#FF00BCD4"
                     materialDesign:DataGridAssist.CellPadding="3"
                     materialDesign:DataGridAssist.ColumnHeaderPadding="5"
                     ColumnWidth="Auto"
@@ -218,7 +218,7 @@
                     <ColumnDefinition/>
                     <ColumnDefinition Width="300"/>
                 </Grid.ColumnDefinitions>
-                <ListBox ItemsSource="{Binding Notifications}" Background="#FFBDF7FB" Margin="0,0,0,0" FontSize="12" BorderBrush="#FF488686" BorderThickness="5,5,5,5" Height="Auto" Grid.Row="1" Grid.Column="1" d:ItemsSource="{d:SampleData ItemCount=5}"/>
+                <ListBox ItemsSource="{Binding Notifications}" Background="#FFBDF7FB" Margin="0,0,0,0" FontSize="12" BorderBrush="#FF00BCD4" BorderThickness="5,5,5,5" Height="Auto" Grid.Row="1" Grid.Column="1" d:ItemsSource="{d:SampleData ItemCount=5}"/>
                 <Grid x:Name="CounterGrid" Grid.Column="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="70"/>
